# Multi-LOD

./: .gitignore  CMakeLists.txt  README.md  lod.cpp  main.cpp  run.sh
glb_model/multi_lod_soup_0.1/: 3d-vh-f-larynx_0.1.glb  3d-vh-f-main-bronchus_0.1.glb  3d-vh-f-skin_0.1.glb  3d-vh-f-trachea_0.1.glb  3d-vh-m-larynx_0.1.glb  3d-vh-m-lung_0.1.glb  3d-vh-m-main-bronchus_0.1.glb  3d-vh-m-trachea_0.1.glb  Allen_F_Brain_0.1.glb  Allen_M_Brain_0.1.glb  NIH_F_Lymph_Node_0.1.glb  NIH_M_Lymph_Node_0.1.glb  SBU_F_Intestine_Large_0.1.glb  SBU_M_Intestine_Large_0.1.glb  VH_F_Blood_Vasculature_0.1.glb  VH_F_Fallopian_Tube_L_0.1.glb  VH_F_Fallopian_Tube_R_0.1.glb  VH_F_Heart_0.1.glb  VH_F_Kidney_L_0.1.glb  VH_F_Kidney_R_0.1.glb  VH_F_Knee_L_0.1.glb  VH_F_Knee_R_0.1.glb  VH_F_Liver_0.1.glb  VH_F_Ovary_L_0.1.glb  VH_F_Ovary_R_0.1.glb  VH_F_Pancreas_0.1.glb  VH_F_Pelvis_0.1.glb  VH_F_Placenta_0.1.glb  VH_F_Small_Intestine_0.1.glb  VH_F_Spinal_Cord_0.1.glb  VH_F_Spleen_0.1.glb  VH_F_Thymus_0.1.glb  VH_F_Ureter_L_0.1.glb  VH_F_Ureter_R_0.1.glb  VH_F_Urinary_Bladder_0.1.glb  VH_F_Uterus_0.1.glb  VH_M_Blood_Vasculature_0.1.glb  VH_M_Heart_0.1.glb  VH_M_Kidney_L_0.1.glb  VH_M_Kidney_R_0.1.glb  (+15 more)
include/: lod.h
multi_lod_0.2/3d-vh-f-eye-l/: VH_F_palpebral_conjunctiva_of_left_lower_eyelid_0.2.off  VH_F_pupil_L_0.2.off  VH_F_schlemms_canal_L_0.2.off
multi_lod_0.2/3d-vh-f-eye-r/: VH_F_aqueous_humor_R_0.2.off  VH_F_macula_lutea_R_0.2.off  VH_F_optic_disc_R_0.2.off  VH_F_pupil_R_0.2.off
multi_lod_0.2/3d-vh-f-larynx/: VH_F_corniculate_cartilage_L_0.2.off
(+8985 files in other folders)
